--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+
+:root {
+  --main-color: rgb(42, 140, 189);
+  --main-ligth-color: rgb(192, 221, 236);
+  --light-grey: rgb(240, 242, 245);
+  --light-grey-x2: rgb(247, 248, 249);
+  --dark-grey: rgb(101, 104, 108);
+  --black: rgb(0, 0, 0);
+  --white: rgb(255, 255, 255);
+  --green: rgb(148, 221, 179);
+  --red: rgb(235, 146, 146);
+  --dark-red: rgb(216, 38, 39);
+  --yellow: rgb(255, 249, 132);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Noto Sans', sans-serif;
 }
