--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -1,5 +1,5 @@
 .header-container {
-    padding: 1em 6em;
+    padding: 1em 10em;
     width: 100vw;
     background-color: var(--main-color);
 }
@@ -8,11 +8,12 @@
     font-size: 1.5em;
     font-weight: bold;
     color: var(--white);
+    text-align: center;
 }
 
 /* Body */
 .body {
-    margin: 1em 6em;
+    margin: 1em 10em;
     display: flex;
     flex-direction: column;
     gap: 0.625em;
@@ -73,7 +74,8 @@ input {
     gap: 0.625em;
 }
 
-.wrap-content>h2 {
+.wrap-content>h2,
+.wrap-dialog>h2 {
     font-size: 1.25em;
     font-weight: bold;
     color: var(--black);
@@ -91,4 +93,102 @@ input {
     display: flex;
     align-items: center;
     gap: 0.25em;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.wrap-dialog {
+    padding: 1.5em;
+    background-color: var(--white);
+    border-radius: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 0.628em;
+    width: 70%;
+}
+
+.content-url {
+    font-size: 0.8125em;
+    text-decoration: underline;
+    font-style: italic;
+    color: var(--main-color);
+    cursor: pointer;
+}
+
+.wrap-feedback {
+    background-color: var(--light-grey);
+    color: var(--dark-grey);
+    border-radius: 0.5em;
+    padding: 1.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.625em;
+    color: var(--black);
+    font-size: 1em;
+}
+
+.divide {
+    height: 0.01em;
+    width: 100%;
+    background-color: var(--dark-grey);
+}
+
+.feedback-choice {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 0.8125em;
+    color: var(--dark-grey);
+}
+
+.like-dislike {
+    display: flex;
+    gap: 0.25em;
+}
+
+.wrap-bottom {
+    width: 100%;
+    display: flex;
+    gap: 0.625em;
+}
+
+.btn {
+    flex: 1;
+    padding: 0.5em 1em;
+    border: none;
+    border-radius: 0.25em;
+    font-size: 1em;
+    font-weight: bold;
+    transition: all 0.3s ease;
+}
+
+.btn-cancel {
+    background-color: var(--light-grey);
+    color: var(--main-color);
+}
+
+.btn-feedback {
+    background-color: var(--main-color);
+    color: var(--white);
+}
+
+.btn:hover {
+    transform: scale(1.03);
+    cursor: pointer;
 }
