--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -145,17 +145,28 @@
     justify-content: center;
     align-items: center;
     flex: 1;
-    gap: 0.25em;
+    gap: 0.5em;
 }
 
 .category-item {
-    font-size: 12px;
+    font-size: 13px;
     font-weight: bold;
     color: var(--light-grey);
     padding: 0.5em 1em;
     border-radius: 9999px;
     transition: all 0.3s ease;
     text-align: center;
+}
+
+.cate-arrow {
+    color: var(--light-grey);
+    border-radius: 9999px;
+    transition: all 0.3s ease;
+}
+
+.cate-arrow:hover {
+    transform: scale(1.3);
+    cursor: pointer;
 }
 
 .category-item:hover {
